<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="728841808@qq.com">weiwei</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>interface</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>octomap_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msg</depend>
  <!-- <depend>Eigen</depend> -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
